# RustPods

./: .env.example  .gitignore  BATTERY_INTELLIGENCE_DESIGN.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README  README.md  SECURITY.md  app.rc  app_rs_content.txt  build.rs  codecov.yml  coverage-notes.md  coverage.ps1  debug_output.txt  settings.json  software_engi.md  test_output.txt  ui_launcher.rs
.cursor/rules/: airpodsProtocol.mdc  bluetooth.mdc  cursor_rules.mdc  icedPatterns.mdc  iced_patterns.mdc  index.mdc  learned-memories.mdc  memory.mdc  projectStructure.mdc  protectedFiles.mdc  testGuidelines.mdc  theme.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  manual-test-issue.md  question.md
.github/workflows/: code-coverage.yml  release.yml  rust-ci.yml
assets/: README.md
coverage/: cobertura.xml
docs/: CONTRIBUTING.md  README.md  SECURITY.md  clippy_warnings_inventory.md  index.md  theme.md  verification_report.md
docs/development/: PACKAGING_SUMMARY.md  assets.md  battery_intelligence.md  build-optimization-guide.md  bulletproof-ui-testing.md  configurable-logging-system.md  contributing.md  logging-best-practices.md  manual-testing-guide.md  system-tray-implementation.md  test-coverage.md  testing-best-practices.md  ui-components.md
docs/user-guide/: getting-started.md
examples/: airpods_battery_fallback.rs  event_system.rs  filter_test.rs  test_airpods.rs
scripts/: build_all.ps1  build_all.sh  coverage.sh  test_performance.ps1  test_ui_suite.ps1
scripts/airpods_battery_cli/: CMakeLists.txt  README.md
src/: airpods_tests.rs  app_controller.rs  app_state_controller.rs  assets.rs  bluetooth_tests.rs  diagnostics.rs  error.rs  error_display_test.rs  errors.rs  lib.rs  lifecycle_manager.rs  logging.rs  main.rs  state_persistence.rs  telemetry.rs  tests_mod.rs
src/airpods/: battery.rs  battery_estimator.rs  battery_intelligence.rs  detector.rs  filter.rs  mod.rs
src/app/: mod.rs
src/bluetooth/: adapter.rs  airpods_bridge.rs  battery.rs  battery_monitor.rs  battery_monitor.rs.new  cli_scanner.rs  events.rs  examples.rs  filter.rs  mod.rs  peripheral.rs  scanner.rs  scanner_config.rs
src/config/: app_config.rs  mod.rs
src/ui/: app.rs  fixed_app.rs  fixed_state_app.rs  form_validation.rs  keyboard_shortcuts.rs  main_window.rs  main_window.rs.bak  message.rs  mod.rs  settings_window.rs  state.rs  state_app.rs  state_manager.rs  system_tray.rs  system_tray_controller.rs  test_helpers.rs  theme.rs  utils.rs  window_management.rs  window_visibility.rs
tests/: airpods_error_handling_tests.rs  airpods_tests.rs  app_battery_monitoring_tests.rs  app_battery_monitoring_tests.rs.disabled  app_config_tests.rs  bluetooth_mocks.rs  bluetooth_tests.rs  common_test_helpers.rs  config_tests.rs  error_context_display_test.rs  error_handling_tests.rs  form_validation_tests.rs  mod.rs  module_integration_tests.rs  module_integration_tests.rs.disabled  settings_ui_tests.rs  settings_window_tests.rs  state_management_integration_tests.rs  state_management_integration_tests.rs.disabled  state_manager_tests.rs  system_tray_integration_tests.rs  system_tray_integration_tests.rs.disabled  system_tray_tests.rs  test_helpers.rs  window_visibility_tests.rs
tests/airpods/: airpods_tests.rs  battery_intelligence_benchmarks.rs  battery_intelligence_tests.rs  battery_intelligence_validation.rs  detection_error_handling_tests.rs  detector_tests.rs  mod.rs
tests/bluetooth/: adapter.rs  battery_monitoring.rs  battery_monitoring.rs.disabled  battery_status.rs  bluetooth_tests.rs  cli_scanner_tests.rs  common_utils.rs  config.rs  detection.rs  filtering.rs  mock_tests.rs  mocks.rs  mod.rs  scanner_tests.rs  scanning.rs
(+76 files in other folders)
