[package]
name = "rustpods"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.10"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
iced = { version = "0.10", features = ["tokio", "debug", "advanced"] }
dirs-next = "2.0"
tray-item = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
rand = "0.8"
ctrlc = "3.4.7"
windows-sys = { version = "0.59.0", features = ["Win32_System_Power", "Win32_UI_WindowsAndMessaging"] }
dirs = "6.0.0"
uuid = "1.5"

[dev-dependencies]
mockall = "0.11"
pretty_assertions = "1.4"
tempfile = "3.8"
tokio-stream = "0.1"
async-trait = "0.1"

[lib]
name = "rustpods"
path = "src/lib.rs"

[[bin]]
name = "rustpods"
path = "src/main.rs"
